--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 8081
-MONGODB_URL = mongodb://localhost:27017/fabric
+MONGODB_URL = mongodb+srv://user:user123@fabriccluster.4pbg5aq.mongodb.net/
